tests/snapshots/render__japanese_punctuation_40.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/japanese/punctuation.md\", \"40\")"
---
# 禁則処理
────────────────────────────────────────

句点が行頭に来ないことを確認します。あい
うえおかきくけこさしすせそたちつてと。次
の文が続きます。

読点の扱いも確認します。あいうえおかきく
けこさしすせそたちつてと、次の節が続きま
す。

括弧の扱いを確認します。あいうえおかきく
けこさしすせそ「引用された文字列」たちつ
てと。

丸括弧の場合はこうなります。あいうえおか
きくけこさしすせそ（補足説明）たちつて
と。

二重山括弧の場合です。あいうえおかきくけ
こさしすせそ《強調》たちつてと。

英数字と混在した場合。あいうえお ASCII
text かきくけこ 12345 さしすせそ。

長音記号の扱いです。あいうえおかきくけ
サーバー構成を確認します。

小書きの仮名も同様です。あいうえおかき
ちょっとした補足が続きます。

区切り約物の扱いです。あいうえおかきく
と！次の文が続きます。

中点類の扱いです。あいうえおかきくけこ
一・二と節が続きます。

繰返し記号の扱いです。あいうえおかきく
人々の暮らしです。
