tests/snapshots/render__japanese_punctuation_80.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/japanese/punctuation.md\", \"80\")"
---
# 禁則処理
────────────────────────────────────────────────────────────────────────────────

句点が行頭に来ないことを確認します。あいうえおかきくけこさしすせそたちつてと。次
の文が続きます。

読点の扱いも確認します。あいうえおかきくけこさしすせそたちつてと、次の節が続きま
す。

括弧の扱いを確認します。あいうえおかきくけこさしすせそ「引用された文字列」たちつ
てと。

丸括弧の場合はこうなります。あいうえおかきくけこさしすせそ（補足説明）たちつて
と。

二重山括弧の場合です。あいうえおかきくけこさしすせそ《強調》たちつてと。

英数字と混在した場合。あいうえお ASCII text かきくけこ 12345 さしすせそ。
