tests/snapshots/render__japanese_showcase_40.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/japanese/showcase.md\", \"40\")"
---
# 日本語ショーケース
────────────────────────────────────────

この段落は日本語のテキストです。ターミナ
ルの幅に合わせて折り返されることを確認し
ます。句読点が行頭に来ないこと、および括
弧が行末に来ないことも確認します。

英語と日本語が mixed になった文章です。
Terminal の表示幅は Unicode の east
asian width に従って計算されます。

## 箇条書き
────────────────────────────────────────

• 最初の項目
• 二番目の項目です。こちらは長めの文章に
  して、折り返しの挙動を確認します。
  • ネストした項目
• 三番目の項目

## 引用
────────────────────────────────────────

│ 引用の中の日本語テキストです。境界線の
│ 分だけ幅が狭くなります。

## 表
────────────────────────────────────────

┌────────┬───────────────────────┬─────┐
│ 項目   │ 説明                  │  備 │
│        │                       │  考 │
├────────┼───────────────────────┼─────┤
│ 見出し │ 日本語の説明文が入り  │   1 │
│        │ ます                  │     │
│ 本文   │ こちらも日本語です    │  22 │
└────────┴───────────────────────┴─────┘

## コード
────────────────────────────────────────

╭─ python
│ def こんにちは():
│     print("世界")
╰─
