tests/snapshots/render__japanese_showcase_80.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/japanese/showcase.md\", \"80\")"
---
# 日本語ショーケース
────────────────────────────────────────────────────────────────────────────────

この段落は日本語のテキストです。ターミナルの幅に合わせて折り返されることを確認し
ます。句読点が行頭に来ないこと、および括弧が行末に来ないことも確認します。

英語と日本語が mixed になった文章です。Terminal の表示幅は Unicode の east asian
width に従って計算されます。

## 箇条書き
────────────────────────────────────────────────────────────────────────────────

• 最初の項目
• 二番目の項目です。こちらは長めの文章にして、折り返しの挙動を確認します。
  ◦ ネストした項目
• 三番目の項目

## 引用
────────────────────────────────────────────────────────────────────────────────

│ 引用の中の日本語テキストです。境界線の分だけ幅が狭くなります。

## 表
────────────────────────────────────────────────────────────────────────────────

┌────────┬──────────────────────────┬──────┐
│ 項目   │ 説明                     │ 備考 │
├────────┼──────────────────────────┼──────┤
│ 見出し │ 日本語の説明文が入ります │    1 │
│ 本文   │ こちらも日本語です       │   22 │
└────────┴──────────────────────────┴──────┘

## コード
────────────────────────────────────────────────────────────────────────────────

╭─ python
│ def こんにちは():
│     print("世界")
╰─
