tests/snapshots/render__japanese_tables_40.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/japanese/tables.md\", \"40\")"
---
# 日本語の表
────────────────────────────────────────

┌───────┬──────┬───────────────────────┐
│ 機能  │ 対応 │ 説明                  │
├───────┼──────┼───────────────────────┤
│ 見出  │ 対応 │ ATX 見出しのみ対応し  │
│ し    │      │ ます                  │
│ 表    │ 対応 │ Unicode 表示幅で列幅  │
│       │      │ を割り当てます        │
│ 数式  │ 非対 │ ソースをそのまま表示  │
│       │  応  │ します                │
└───────┴──────┴───────────────────────┘

狭い幅では縦方向へ切り替わります。

┌────────────┬────────────┬────────────┐
│ とても長い │ もう一つの │ 三番目のと │
│ 見出しの列 │ とても長い │ ても長い列 │
│            │ 列         │            │
├────────────┼────────────┼────────────┤
│ 日本語の本 │ 日本語の本 │ 日本語の本 │
│ 文が入りま │ 文が入りま │ 文が入りま │
│ す         │ す         │ す         │
└────────────┴────────────┴────────────┘
