tests/snapshots/render__japanese_tables_80.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/japanese/tables.md\", \"80\")"
---
# 日本語の表
────────────────────────────────────────────────────────────────────────────────

┌────────┬────────┬────────────────────────────────────┐
│ 機能   │  対応  │ 説明                               │
├────────┼────────┼────────────────────────────────────┤
│ 見出し │  対応  │ ATX 見出しのみ対応します           │
│ 表     │  対応  │ Unicode 表示幅で列幅を割り当てます │
│ 数式   │ 非対応 │ ソースをそのまま表示します         │
└────────┴────────┴────────────────────────────────────┘

狭い幅では縦方向へ切り替わります。

┌────────────────────────┬────────────────────────┬────────────────────────┐
│ とても長い見出しの列   │ もう一つのとても長い列 │ 三番目のとても長い列   │
├────────────────────────┼────────────────────────┼────────────────────────┤
│ 日本語の本文が入ります │ 日本語の本文が入ります │ 日本語の本文が入ります │
└────────────────────────┴────────────────────────┴────────────────────────┘
