tests/snapshots/render__mermaid_azure_graph_120.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/mermaid/azure-graph.md\", \"120\")"
---
# Azure graph
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

╭─ mermaid
│ ┌───────┐     ┌────────┐     ┌──────┐
│ │       │     │        │     │      │
│ │ Start ├────►│ Review ├────►│ Done │
│ │       │     │        │     │      │
│ └───────┘     └────────┘     └──────┘
╰─
