tests/snapshots/render__mermaid_azure_graph_40.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/mermaid/azure-graph.md\", \"40\")"
---
# Azure graph
────────────────────────────────────────

╭─ mermaid
│ ┌───────┐     ┌────────┐     ┌──────┐
│ │       │     │        │     │      │
│ │ Start ├────►│ Review ├────►│ Done │
│ │       │     │        │     │      │
│ └───────┘     └────────┘     └──────┘
╰─
