tests/snapshots/render__mermaid_azure_graph_80.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/mermaid/azure-graph.md\", \"80\")"
---
# Azure graph
────────────────────────────────────────────────────────────────────────────────

╭─ mermaid
│ ┌───────┐     ┌────────┐     ┌──────┐
│ │       │     │        │     │      │
│ │ Start ├────►│ Review ├────►│ Done │
│ │       │     │        │     │      │
│ └───────┘     └────────┘     └──────┘
╰─
