tests/snapshots/render__mermaid_class_80.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/mermaid/class.md\", \"80\")"
---
# Class diagram
────────────────────────────────────────────────────────────────────────────────

╭─ mermaid
│ ┌───────────────┐
│ │ Document      │
│ ├───────────────┤
│ │ +String title │
│ ├───────────────┤
│ │ +render()     │
│ └───────────────┘
│         △
│         │
│   ┌──────────┐
│   │ WikiPage │
│   └──────────┘
╰─
