tests/snapshots/render__mermaid_er_80.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/mermaid/er.md\", \"80\")"
---
# Entity relationship
────────────────────────────────────────────────────────────────────────────────

╭─ mermaid
│ ┌──────────┐
│ │ CUSTOMER │
│ └──────────┘
│      ||
│    places
│       │
│      o{
│   ┌───────┐
│   │ ORDER │
│   └───────┘
│      ||
│   contains
│       │
│      |{
│ ┌───────────┐
│ │ LINE_ITEM │
│ └───────────┘
╰─
